--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -158,7 +158,7 @@
             height: 200px;
         }
     }
-    // 
+
     @media screen and (max-width:1200px) {
         width: 100%;
         flex-direction: row;
@@ -180,7 +180,7 @@
     position: relative;
 
     img {
-        width: 100%;
+        width: 50%;
         object-fit: contain;
         z-index: 1;
     }
@@ -196,5 +196,11 @@
     }
     @media screen and (max-width: 1200px) {
         margin: 2rem 0;
+    }
+
+    .blas {
+        position: absolute;
+        margin-right: 25%;
+        margin-bottom: 20%;
     }
 }
